
			SWI-Prolog ChangeLog
			====================
VERSION 2.9.6
=============

  * FIXED: foreign-reference handling of exception terms, causing garbage
    collection problems.  Reported by Robert van Engelen.

  * PORT: improved detection and placement of mmap()-ed stacks (Unix sparse
    stack-management) with help of Marcello Balduccini.

  * FIXED: clause/3 to add/remove predicate reference-count while holding
    a choicepoint to the predicate.  Reported by Marcello Balduccini.

  * ADDED: -c flag to plld to turn it into `plcc', just compiling .c or
    .cc files.  Thanks to Marcello Balduccini.

  * MODIFIED: write/1 and friends now only insert spaces before and
    after operators if these are required to be a valid term for read/1.
    The only exception is ,/2, which is written using a space after the
    symbol.  NOTE: foreign packages including <SWI-Stream.h> need
    to be recompiled!!!

  * FIXED: current_predicate/2 not consider abolished predicates that
    still exist as `current', so current_predicate(_, Goal), Goal is
    guaranteed not to raise an exception on Goal.  Should fix recent
    reconsult problems in XPCE.

  * ADDED: user:message_hook/3 hook for print_message/2 (provisional).

  * MODIFIED: Hooks installed by PL_initialise_hook() are called *before*
    the saved-state is loaded, but after the heap is initialised.  This
    implies only foreign predicates may be called from this hook now.

  * FIXED: testing of write-permissions for the library index for
    make/0.

  * MODIFIED: Toplevel queries are now read from user_input, rather
    than from the current input stream.

  * ADDED: feature(history, Depth).  If 0, no history and no history-prompt
    are provided.  This is the default if feature(readline, true) succeeds.

  * FIXED: set_feature(Name, Integer)

  * FIXED: chdir/absolute_file_name problem, reported by Machiel Jansen.
    Thanks.

  * FIXED: erase/1 on records referenced by recorded/3 choicepoints.  Thanks